--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Fraunces&display=swap');
+    
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
     body{
       margin: 0;
       padding: 0;
       font-size: 14px;
-      /* font-family:  Montserrat; */
     }
     .container{
       background: #123456;
@@ -32,11 +33,11 @@
       display: grid;
       justify-content: center;
       align-content: center;
-      grid-template-columns: repeat(auto-fill, 250px) ;
+      grid-template-columns: repeat(auto-fill, 270px) ;
       grid-template-rows: 400px;
     }
     .container-imagen img{
-      width: 250px;
+      width: 270px;
       height: 400px;
       border-radius: 10px 0 0 10px;
       object-fit:cover;
@@ -44,13 +45,35 @@
     .container-info{
       background: #fff;
       border-radius: 0 10px 10px 0;
-      padding: 1.5rem;
+      padding: 1.4rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
     }
     .categoria{
-    letter-spacing: 4px;  
-    font-weight: 500 ,700;
+    letter-spacing: 3px;  
+    font-weight: 500;
     color: hsl(228, 12%, 48%);
     font-family: 'Montserrat';
+    margin: 0;
+    }
+    .titulo{
+    letter-spacing: .75px;  
+
+      line-height: 2.2rem;
+      font-size: 1.8rem;
+      font-weight: 700;
+      font-family: 'Fraunces';
+    margin: 0;
+    }
+    .descripcion{
+    font-weight: 500;
+    font-family: 'Montserrat';
+      color: hsl(228, 12%, 48%);
+    margin: 0;
+    line-height: 1.3rem;
+    text-align:start;
+
     }
   </style>
 </head>
@@ -63,8 +86,8 @@
       </div>
       <div class="container-info">
         <p class="categoria">PERFUME</p>
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p> A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        <h1 class="titulo">Gabrielle Essence Eau De Parfum</h1>
+        <p class="descripcion"> A floral, solar and voluptuous interpretation composed by Olivier Polge, 
           Perfumer-Creator for the House of CHANEL.</p>
           <div>
             <span>$149.99</span>
