Utilizando la herramienta auto-fit.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       display: grid;
       justify-content: center;
       align-content: center;
-      grid-template-columns: repeat(auto-fill, 270px) ;
+      grid-template-columns: repeat(auto-fit, 270px) ;
       grid-template-rows: 400px;
     }
     .container-imagen img{
