Se actualizo el formato de la imagen.

--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
 .btn-succes:hover{
     background-color: hsl(158, 35%, 31%);
 }
-.full-desktop{
+.full-mobile{
   display: none;
 }
+
 @media (max-width: 600px) {
  
   .container-tarjeta{
