--- a/index.html
+++ b/index.html
@@ -1,181 +1,42 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Montserrat">
-  
-  <title>Frontend | Product preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Fraunces&display=swap');
-    
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-    body{
-      margin: 0;
-      padding: 0;
-      font-size: 14px;
-    }
-    .container{
-      background:  hsl(14, 32%, 85%); 
-      height: 100vh;
-      display: grid;
-      justify-content: center;
-      align-content: center;
-      grid-template-columns: 100%;
-    }
-    .container-tarjeta{
-      display: grid;
-      justify-content: center;
-      align-content: center;
-      grid-template-columns: repeat(auto-fit, 270px) ;
-      grid-template-rows: 400px;
-    }
-    .container-imagen img{
-      width: 270px;
-      height: 400px;
-      border-radius: 10px 0 0 10px;
-      object-fit:cover;
-    }
-    .container-info{
-      background: hsl(30, 38%, 92%);
-      border-radius: 0 10px 10px 0;
-      padding: 1.4rem;
-      display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
-    }
-    .categoria{
-    letter-spacing: 3px;  
-    font-weight: 500;
-    color: hsl(228, 12%, 48%);
-    font-family: 'Montserrat';
-    margin: 0;
-    }
-    .titulo{
-      letter-spacing: .75px;  
-      line-height: 30px;
-      font-size: 1.8rem;
-      font-weight: 700;
-      font-family: 'Fraunces';
-    margin: 0;
-    color: hsl(212, 21%, 14%);
-    }
-    .descripcion{
-    font-weight: 500;
-    font-family: 'Montserrat';
-      color: hsl(228, 12%, 48%);
-    margin: 0;
-    line-height: 1.3rem;
-
-    }
-    .price{
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      gap: 1rem;
-    }
-    .price-real{
-      font-size: 1.8rem;
-      font-family: 'Fraunces';
-      color:  hsl(158, 36%, 37%);
-      font-weight: 700;
-
-    }
-    .price-anterior{
-      color: hsl(228, 12%, 48%);
-      font-weight: 500;
-    font-family: 'Montserrat';
-      text-decoration: line-through;
-
-    }
-    .button{
-    font-family: 'Montserrat';
-
-      font-weight: 600;
-    border-radius: 0.35rem;
-    border: transparent;
-    color: var(--eps-black);
-    padding: .8em;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 0.8rem;
-    cursor: pointer;
-    text-transform: capitalize;
-    display: flex;
-    justify-content: center;
-    gap: 0.5rem;
-    }
-    .btn-succes{
-    color:  hsl(0, 0%, 100%);
-    background-color:   hsl(158, 36%, 37%);
-    transition: .8s ease;   
-}
-.btn-succes:hover{
-    background-color: hsl(158, 35%, 31%);
-}
-.full-mobile{
-  display: none;
-}
-.full-desktop{
-  display: block;
-}
-
-@media (max-width: 600px){
- 
-  .container-tarjeta{
-      grid-template-columns: repeat(auto-fit, 300px) ;
-      grid-template-rows: 250px;
-    }
-    .container-info{
-      gap: 1rem;
-    }
-    .container-imagen img{
-      width: 300px;
-      height: 250px;
-      border-radius: 10px 10px 0 0;
-    }
-    .container-info{
-      border-radius: 0 0 10px 10px;
-    }
-    .full-desktop{
-      display: none;
-        }
-        .full-mobile{
-          display: block;
-    }
-}
-
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <title>Tarjeta de Productos | Mei</title>
 </head>
+
 <body>
-<section>
-  <div class="container">
-    <div class="container-tarjeta">
-      <div class="container-imagen">
-        <img src="images/image-product-desktop.jpg" class="full-desktop" alt="">
-        <img src="images/image-product-mobile.jpg" class="full-mobile" alt="">
-      </div>
-      <div class="container-info">
-        <p class="categoria">PERFUME</p>
-        <h1 class="titulo">Gabrielle Essence Eau De Parfum</h1>
-        <p class="descripcion"> A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-          Perfumer-Creator for the House of CHANEL.</p>
+  <section>
+    <div class="container">
+      <div class="container-tarjeta">
+        <div class="container-imagen">
+          <img src="images/image-product-desktop.jpg" class="full-desktop" alt="">
+          <img src="images/image-product-mobile.jpg" class="full-mobile" alt="">
+        </div>
+        <div class="container-info">
+          <p class="categoria">PERFUME</p>
+          <h1 class="titulo">Gabrielle Essence Eau De Parfum</h1>
+          <p class="descripcion"> A floral, solar and voluptuous interpretation composed by Olivier Polge,
+            Perfumer-Creator for the House of CHANEL.</p>
           <div class="price">
             <span class="price-real">$149.99</span>
             <span class="price-anterior">$169.99</span>
           </div>
-        <button class="button btn-succes">
-          <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"/></svg>
-          Add to Cart </button>
+          <button class="button btn-succes">
+            <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
+                fill="#FFF" /></svg>
+            Add to Cart </button>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 </body>
+
 </html>
