Se establecio los colores de fondo.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Montserrat">
   <link rel="stylesheet" href="style.css">
-  <title>Tarjeta de Productos | Mei</title>
+  <title>Mei | Tarjeta de Productos</title>
 </head>
 
 <body>
